--- a/style.css
+++ b/style.css
@@ -22,15 +22,112 @@
 
 ul {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
     margin-top: 1rem;
     list-style: none;
     border: 2px solid var(--facebook);
+    /* 아래 url은 400 400 이미지 아무거나 가져와주는 사이트 */
+    grid-template-columns: repeat(4, 1fr);
 }
 
 li {
     width: 100px;
     height: 100px;
-    border: 1px solid red;
     color: #fff;
+    background: url("https://placeimg.com/400/400/1");
+}
+
+.list0 {
+    background-position-x: 0;
+    background-position-y: 0;
+}
+
+.list1 {
+    background-position-x: -100px;
+    background-position-y: 0;
+}
+
+.list2 {
+    background-position-x: -200px;
+    background-position-y: 0;
+}
+
+.list3 {
+    background-position-x: -300px;
+    background-position-y: 0;
+}
+
+.list4 {
+    background-position-x: 0px;
+    background-position-y: -100px;
+}
+
+.list5 {
+    background-position-x: -100px;
+    background-position-y: -100px;
+}
+
+.list6 {
+    background-position-x: -200px;
+    background-position-y: -100px;
+}
+
+.list7 {
+    background-position-x: -300px;
+    background-position-y: -100px;
+}
+
+.list8 {
+    background-position-x: 0px;
+    background-position-y: -200px;
+}
+
+.list9 {
+    background-position-x: -100px;
+    background-position-y: -200px;
+}
+
+.list10 {
+    background-position-x: -200px;
+    background-position-y: -200px;
+}
+
+.list11 {
+    background-position-x: -300px;
+    background-position-y: -200px;
+}
+
+.list12 {
+    background-position-x: 0;
+    background-position-y: -300px;
+}
+
+.list13 {
+    background-position-x: -100px;
+    background-position-y: -300px;
+}
+
+.list14 {
+    background-position-x: -200px;
+    background-position-y: -300px;
+}
+
+.list15 {
+    background-position-x: -300px;
+    background-position-y: -300px;
+}
+
+.start-button {
+    background: var(--facebook);
+    color: #fff;
+    border: none;
+    padding: 1rem 2rem;
+    margin-top: 1rem;
+}
+
+.game-text {
+    position: absolute;
+    font-size: 45px;
+    color: #67c23a;
+    text-shadow: 1px 1px rgba(0,0,0,0.5);
+    display: none;
 }
