--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ li {
     width: 100px;
     height: 100px;
     color: #fff;
-    background: url("https://placeimg.com/400/400/1");
+    background: url("https://placeimg.com/400/400/any");
 }
 
 .list0 {
